--- a/EXO1/index2.html
+++ b/EXO1/index2.html
@@ -8,7 +8,7 @@
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
             integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
             crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <title>S01</title>
+        <title>S02</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
@@ -94,10 +94,12 @@
                                     <th>Date</th>
                                     <th>Sens</th>
                                     <th>Montant</th>
+                                    <th>Destinataire</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
+                                    <td>...</td>
                                     <td>...</td>
                                     <td>...</td>
                                     <td>...</td>
@@ -114,8 +116,7 @@
                             class="from-control" value="" min="500">
                     </div>
                     <div class="form-group">
-                        <label for="trans">Transaction<span class="fa fa-trash
-                                poubelle"></label>
+                        <label for="trans">Transaction</label>
                             <select id="trans" class="from-control">
                                 <option value="s">Selectionner</option>
                                 <option value="d">Depot</option>
@@ -176,6 +177,6 @@
                     </div>
                 </div>
 
-            <script src="script1.js"></script>
+            <script src="scriptF.js"></script>
     </body>
 </html>
